// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the Column component Test if Column component renders with children 1`] = `[Function]`;

exports[`Test the Container component Test if Container component renders with children 1`] = `
<div>
  <div
    class="sc-bdfBwQ dtXNoS"
  >
    <p>
      I'm a Container
    </p>
  </div>
</div>
`;

exports[`Test the WarningText component Test if WarningText component renders with children 1`] = `
<div>
  <p
    class="sc-gsTCUz wIMML"
  >
    <p>
      I'm a WarningText
    </p>
  </p>
</div>
`;
